--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Welcome to My Basic HTML Page</h1>
     <p>This is a simple paragraph of text.</p>
+    <p>new change</p>
 </body>
 </html>
