--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Welcome to My Basic HTML Page</h1>
+    <h2>New Page</h2>
     <p>This is a simple paragraph of text.</p>
 </body>
 </html>
