--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Welcome to My Basic HTML Page</h1>
     <h2>New Page</h2>
-    <p>This is a simple paragraph of text.</p>
+    <p>This is a simple paragraph and sentence of text.</p>
     <p>new change</p>
 </body>
 </html>
